--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
-    "next-auth": "^4.0.6",
+    "next-auth": "^4.0.0-beta.7",
     "prisma": "^3.7.0",
     "sass": "^1.45.2"
   },
