--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "webpack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -37,7 +37,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
-    "next-auth": "^4.0.0-beta.7",
+    "next-auth": "^4.0.6",
     "prisma": "^3.7.0",
     "sass": "^1.45.2"
   },
