--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "reactstrap": "^9.0.1",
-    "socket.io-client": "^4.4.1"
+    "socket.io-client": "^4.4.1",
+    "next-auth": "^4.0.6"
   },
   "devDependencies": {
     "@pimred/eslint-config-pimred": "^1.0.3",
@@ -37,7 +38,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
-    "next-auth": "^4.0.6",
     "prisma": "^3.7.0",
     "sass": "^1.45.2"
   },
