--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "react-redux": "^7.2.6",
     "reactstrap": "^9.0.1",
     "socket.io-client": "^4.4.1",
-    "next-auth": "^4.0.6"
+    "next-auth": "^4.0.6",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@pimred/eslint-config-pimred": "^1.0.3",
-    "axios": "^0.24.0",
+    
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.1.3",
     "eslint": "^8.6.0",
