--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --config ./config/jest.config.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -14,22 +15,26 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@pimred/redux": "^0.2.5",
     "@prisma/client": "^3.7.0",
+    "axios": "^0.24.0",
     "classnames": "^2.2.6",
     "crypto": "^1.0.1",
     "dayjs": "^1.10.7",
+    "jest-dom": "^4.0.0",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
+    "node-mocks-http": "^1.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "reactstrap": "^9.0.1",
-    "socket.io-client": "^4.4.1",
-    "next-auth": "^4.0.6",
-    "axios": "^0.24.0"
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@pimred/eslint-config-pimred": "^1.0.3",
-    
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.4.6",
     "bootstrap": "^5.1.3",
     "eslint": "^8.6.0",
     "eslint-config-next": "12.0.7",
@@ -39,6 +44,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
+    "jest": "^27.4.7",
+    "jest-css-modules": "^2.1.0",
     "prisma": "^3.7.0",
     "sass": "^1.45.2"
   },
